--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.9",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "readline-sync": "^1.4.10",
     "socket.io": "^4.8.1",
     "whatsapp-web.js": "^1.26.0"
   }
